--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1140.0",
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "mongoose": "^6.3.2",
-    "nodemon": "^2.0.16"
+    "multer": "^1.4.4",
+    "nodemon": "^2.0.16",
+    "valid-url": "^1.0.9"
   }
 }
